@@ -16,7 +16,8 @@ extern FB_DATADESC *__fb_data_ptr;
 #define FB_DATATYPE_OFS  -2
 #define FB_DATATYPE_WSTR 0x8000
 
-FBCALL void 		fb_DataRestore		( FB_DATADESC *labeladdr );
+FBCALL void         fb_DataRestore      ( FB_DATADESC *labeladdr );
+       void         fb_DataNext         ( void );
 FBCALL void         fb_DataReadStr      ( void *dst, int dst_size, int fillrem );
 FBCALL void         fb_DataReadByte     ( char *dst );
 FBCALL void         fb_DataReadUByte    ( unsigned char *dst );
@@ -24,9 +25,7 @@ FBCALL void         fb_DataReadShort    ( short *dst );
 FBCALL void         fb_DataReadUShort   ( unsigned short *dst );
 FBCALL void         fb_DataReadInt      ( int *dst );
 FBCALL void         fb_DataReadUInt     ( unsigned int *dst );
-FBCALL void 		fb_DataReadLongint	( long long *dst );
-FBCALL void 		fb_DataReadULongint	( unsigned long long *dst );
+FBCALL void         fb_DataReadLongint  ( long long *dst );
+FBCALL void         fb_DataReadULongint ( unsigned long long *dst );
 FBCALL void         fb_DataReadSingle   ( float *dst );
 FBCALL void         fb_DataReadDouble   ( double *dst );
-
-       short        fb_DataGetLen       ( void );
