@@ -119,6 +119,7 @@ Version 0.25.0:
 - codepage-specific zstring to Unicode wstring conversions are now working, by default using the locale set when an FB program is started
 - FOR now retains the signedness of the step value, so that negative steps may be used on unsigned counters of any size
 - Visibility checks for copy constructor calls for BYVAL arguments were missing
+- #591: READing further strings/wstrings after already having READ the last DATA statement caused a crash
 
 
 Version 0.24.0:
